--- a/intro.tex
+++ b/intro.tex
@@ -29,7 +29,7 @@ Fakulta informatiky a informačných technológií
 \vspace{5.5cm}
 
 \begin{center}
-{\Large \textmd{{Ján Antala}}}
+{\Large \textmd{{Bc. Ján Antala}}}
 \end{center}
 
 \vspace{0.1cm}
@@ -81,7 +81,7 @@ FAKULTA INFORMATIKY A INFORMAČNÝCH TECHNOLÓGII\\
 Študijný program: INFORMAČNÉ SYSTÉMY
 \newline
 
-Autor: Ján Antala\\
+Autor: Bc. Ján Antala\\
 Diplomová práca: Adaptívny web dizajn.\\ 
 Vedúci diplomovej práce: doc. Ing. Michal Čerňanský PhD. \\
 December, 2013
@@ -101,7 +101,7 @@ FACULTY OF INFORMATICS AND INFORMATION TECHNOLOGIES\\
 Degree Course: INFORMATION SYSTEMS
 \newline
 
-Author: Ján Antala\\
+Author: Bc. Ján Antala\\
 Diploma Thesis: Adaptive web design. \\
 Supervisor: doc. Ing. Michal Čerňanský PhD. \\
 2013, December
