refactor(intro): rewrite abstract

--- a/intro.tex
+++ b/intro.tex
@@ -87,8 +87,8 @@ Vedúci diplomovej práce: doc. Ing. Michal Čerňanský PhD. \\
 December, 2013
 \newline
 
-Používanie mobilných zariadení rapídne rastie a tie so sebou prinášajú nie len rôzne veľkosti displejov a nové interakčné spôsoby, ale aj nové druhy pripojenia na internet. Je preto nevyhnutné prispôsobiť webové stránky rôznym zariadeniam a novým trendom v oblasti interakcie.
-V práci vychádzame z techniky ,,Mobile first progressive enhancement'', ktorá kladie dôraz na vytvorenie dizajnu s vysokým výkonom pre mobilné zariadenia a neskorším profitom pri klasických stolových počítačoch. V práci prezentujeme nový prístup adaptácie webových komponentov založenom na vlastnostiach používateľovho zariadenia a externých podmienok a nové možnosti interakcie webovej aplikácie založených na rozpoznaní reči, pohybu alebo rotácie zariadenia.
+Používanie mobilných zariadení rapídne rastie a tie so sebou prinášajú nie len rôzne veľkosti displejov a nové interakčné spôsoby, ale aj nové druhy pripojenia na internet. Ale na web nemajú prístup len smartfóny a klasické počítače. Sú tu smartfóny, tablety, e-čítačky, netbooky, hodinky, televízie, phablety, herné konzoly a množstvo ďalších. Je preto nevyhnutné prispôsobiť webové stránky rôznym zariadeniam a novým trendom v oblasti interakcie.
+V práci vychádzame z techník Mobile first a Progressive enhancement, ktoré kladú dôraz na vytvorenie dizajnu s vysokým výkonom pre mobilné zariadenia a neskorším profitom pri výkonnejších počítačoch. V práci prezentujeme nový prístup adaptácie webových komponentov založenom na vlastnostiach používateľovho zariadenia a externých podmienok a nové možnosti interakcie webovej aplikácie založených na rozpoznaní reči, pohybu alebo rotácie zariadenia.
 Experimentálnym overením úspešnosti navrhnutých spôsobov adaptácie sme dosiahli lepšie výsledky na testovacej vzorke dát ako boli pôvodne používané.
 
 \newpage
@@ -107,9 +107,7 @@ Supervisor: doc. Ing. Michal Čerňanský PhD. \\
 2013, December
 \newline
 
-Mobile device penetration grows rapidly and it brings not only different display sizes with new human interaction methods, but also new kinds of internet connection. So it is neccessary to adapt web pages for different devices and new interaction methods.
-In our work, we follow ,,Mobile First progressive enhancement'' design, which emphasizes a great performance on mobile devices and later profit on classical desktop computers. We present a new way of web components adaptation based on a device features and external conditions in our work and new possibilities of interaction with web application based on speech recognition, motion or device rotation.
-The evaluation of the proposed method of adaptation shows slightly better results than original approach.
+Mobile device penetration grows rapidly and it brings not only different display sizes with new human interaction methods, but also new kinds of internet connection. But there are not just smartphones and desktop computers. We now have Web-enabled smartphones, tablets, e-readers, netbooks, watches, TVs, phablets, notebooks, game consoles and more. So it is necessary to adapt web pages for different devices and new interaction methods. In our work, we follow Mobile First and Progressive Enhancement design, which emphasises a great performance on mobile devices and later profit on high-end computers. We present a new way of web components adaptation based on a device features and external conditions in our work and new possibilities of interaction with web application based on speech recognition, motion or device rotation. The evaluation of the proposed method of adaptation shows slightly better results than original approach.
 
 
 %%%%%%%%%%%%%%%%%%% PREHLASENIE %%%%%%%%%%%%%%%%%%%%%%%%%%%%
