--- a/document.tex
+++ b/document.tex
@@ -51,6 +51,8 @@
 \usepackage[numbers]{natbib}
 \usepackage[titletoc]{appendix}
 
+\usepackage{tabularx}
+
 \addto\captionsslovak{\renewcommand{\appendixname}{Príloha}}
 \rmfamily
 
